# AutomaterAutomater

./: pyproject.toml  sq.py
